--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -54,4 +54,9 @@
 
 //import custom scss folder to project
 @import 'components/_custom.scss';
+@import 'components/_hover.scss';
+@import 'components/_footer.scss';
+@import 'components/_gutterbottom.scss';
+@import 'components/_projectspages.scss';
+@import 'components/_contact.scss';
 @import 'font-awesome';
