--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,20 +1,20 @@
 <footer>
   <div class="grid-x">
-        <div class="small-12 medium-6 large-6 cell">
-          <h5><span>Thunder-Jones</span> Contracting Group Inc</h5>
+    <div class="small-12 medium-6 large-6 cell">
+      <h5><span>Thunder-Jones</span> Contracting Group Inc</h5>
+<br>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos mollitia fugiat</p>
-        
+  <p>Structural Concrete Construction</p>
 
-        </div>
+    </div>
     <div class="small-12 medium-3 large-3 cell">
 
       <address>
         <ul >
-          <li><i class="fa fa-address-card-o"></i> 2515 Pioneer Ave, Suite 1 </li>
+          <li><i class="fa fa-map-marker"></i> 2515 Pioneer Ave, Suite 1 </li>
             <li class="indent"> Vista, CA 92081</li>
             <br>
-            <li><i class="fa fa-clock-o"></i> Mon - Fri: 9:00 am - 5:00 pm</li>
+            <li><i class="fa fa-id-card"></i> License # 888-888888</li>
           </ul>
         </address>
     </div>
