hover event fix in moz
hover event fix in moz

--- a/src/assets/scss/components/_hover.scss
+++ b/src/assets/scss/components/_hover.scss
@@ -73,8 +73,8 @@ color: black;
 }
 
 
-.cptn03:hover img {
-    bottom: -30%;
+//.cptn03:hover img {
+    //bottom: -50%;
 }
 .cptn03:hover .cptn {
     bottom: 0;
