fixed incorrect comment scss hover
fixed incorrect comment scss hover

--- a/src/assets/scss/components/_hover.scss
+++ b/src/assets/scss/components/_hover.scss
@@ -73,9 +73,10 @@ color: black;
 }
 
 
-//.cptn03:hover img {
+/*.cptn03:hover img {
     //bottom: -50%;
-}
+}*/
+
 .cptn03:hover .cptn {
     bottom: 0;
 }
