--- a/src/partials/gutter.html
+++ b/src/partials/gutter.html
@@ -1,6 +1,6 @@
 <section class="gutter">
-  <div class="grid-x">
-    <div class="medium-6 cell">
+  <div class="grid-x grid-padding-x">
+    <div class="cell large-12 text-center">
       <h5><span>Thunder-Jones</span> Contracting Group Inc | <i class="fa fa-copyright"></i> 2017</h5>
     </div>
   </div>
