--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -1,7 +1,7 @@
 /* global style*/
 
 h3 {
-  padding-bottom: 10px;
+  padding-bottom: rem-calc(7);
 }
 
 hr {
@@ -14,24 +14,24 @@ hr {
 
 .top-bar {
   color: $white;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   width: 100%;
 
   h4 {
     font-size: 1.0rem;
-    padding: 3px 10px;
-    margin-top: 7px;
+    padding: rem-calc(3 10);
+    margin-top: rem-calc(7);
     letter-spacing: 0.1px;
   }
 
   span {
     color: lighten( $primary, 30% );
     background: $dark-gray;
-    margin-right: 5px;
+    margin-right: rem-calc(5);
   }
 
   ul {
-    padding-right: 15px;
+    padding-right: rem-calc(15)
   }
 
   li {
@@ -45,7 +45,9 @@ hr {
   a:hover {
     color: $medium-light-gray;
     border-bottom: 1.0px solid $medium-light-gray;
-  }
+      font-size: 0.9rem;
+      transition: 0.3s ease-in-out;
+   }
 }
 
 /* mobile nav and off canvas */
@@ -53,14 +55,14 @@ hr {
 .title-bar-title {
   font-weight: 400;
   letter-spacing: 0.1px;
-  padding: 10px 2px;
+  padding: rem-calc(10 2);
   text-transform: uppercase;
-  text-align: justify;
+  text-align: center;
+
 }
 
 .tblogo {
   color: lighten( $primary, 30% );
-
 }
 
 /*mobile nav sticky*/
@@ -77,7 +79,7 @@ hr {
 #off-canvas-nav-heading {
   color: lighten( $primary, 30% );
   text-transform: uppercase;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
 }
 #off-canvas-nav-subheading {
   color: $white;
@@ -92,24 +94,23 @@ div.off-canvas-nav-list {
 
   a {
     color: $white;
-    font-size: 0.9em;
+    font-size: 0.9rem;
   }
 
   a:hover {
     background-color: lighten( $dark-gray, 3% );
     color: lighten( $primary, 30% );
+    transition: 0.2s ease-in-out;
   }
 }
 
 /* home callout section and showcase*/
 
-.callout.large.primary {
-  height: 450px;
-  padding-top: 120px;
-  padding-bottom: 150px;
+.callout.large {
+  height: 60vh;
+  padding-top: rem-calc(200);
   color: $white;
   margin-top: -2px;
-  min-height: 450px;
 
   h1 {
     color: black;
@@ -117,16 +118,25 @@ div.off-canvas-nav-list {
 }
 
 a.button.small {
-  margin: 5px;
-  padding: 8px 18px;
+  margin: rem-calc(10);
+  padding: rem-calc(8 19);
   font-weight: 450;
-  font-size: 15px;
+  font-size: rem-calc(20);
   line-height: 1.25;
   border-radius: 2px;
   background-color: #EFBB20;
-  text-shadow: 0 0 4px #bf9004;
   box-shadow: -3px -3px 5px $medium-gray;
 }
+
+/*CTA Buttons Hover*/
+a.button.small:hover {
+ background-color: lighten( #EFBB20, 20% );
+ transition: 0.3s ease-in-out;
+ color: black;
+ font-size: rem-calc(20);
+}
+
+
 /*showcase*/
 
 #showcase {
@@ -136,34 +146,34 @@ a.button.small {
 /* who we are */
 
 #about {
-  padding: 60px 20px;
+  padding: rem-calc(60 20);
 }
 /* our services */
 
 #services {
-  padding: 60px 20px;
+  padding: rem-calc(60 20);
 }
 
 /* why us */
 
 .why-us {
   background: $light-gray;
-  padding: 60px 20px;
+  padding: rem-calc(60 20);
 }
 
 /* partners */
 section.partners {
   background: $light-gray;
-  padding: 60px 20px;
+  padding: rem-calc(60 20);
 }
 
 /* meet our team */
 #team {
   background: white;
-  padding: 60px 20px;
+  padding: rem-calc(60 20);
 
   div.media-object-section {
-    padding: 15px;
+    padding: rem-calc(15);
   }
 }
 
