--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,16 +1,13 @@
-<footer>
-  <div class="grid-x">
-    <div class="small-12 medium-6 large-6 cell">
+<footer class="site-footer">
+  <div class="grid-x grid-margin-x">
+
+    <div class="medium-4 large-6 cell">
       <h5><span>Thunder-Jones</span> Contracting Group Inc</h5>
-<br>
-
-  <p>Structural Concrete Construction</p>
-
     </div>
-    <div class="small-12 medium-3 large-3 cell">
 
+    <div class="medium-4 large-3 cell">
       <address>
-        <ul >
+        <ul>
           <li><i class="fa fa-map-marker"></i> 2515 Pioneer Ave, Suite 1 </li>
             <li class="indent"> Vista, CA 92081</li>
             <br>
@@ -19,7 +16,7 @@
         </address>
     </div>
 
-    <div class="small-12 medium-3 large-3 cell">
+    <div class="medium-4 large-3 cell">
       <ul>
         <li><i class="fa fa-phone"></i> (760) 597-0057</li>
         <li><i class="fa fa-fax"></i> (760) 597-0058</li>
@@ -27,5 +24,6 @@
         <li><i class="fa fa-envelope"></i> info@thunderjones.com</li>
       </ul>
     </div>
+
   </div>
 </footer>
