--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,7 +11,7 @@
           <li><i class="fa fa-map-marker"></i> 2515 Pioneer Ave, Suite 1 </li>
             <li class="indent"> Vista, CA 92081</li>
             <br>
-            <li><i class="fa fa-id-card"></i> License # 888-888888</li>
+            <li><i class="fa fa-id-card"></i> CA License #772695</li>
           </ul>
         </address>
     </div>
