--- a/src/partials/main-page-gallery.html
+++ b/src/partials/main-page-gallery.html
@@ -10,7 +10,7 @@
   <div class="grid-x margin-collapse small-up-1 medium-up-2 large-up-4 ">
     <div class="cell">
       <div class="main-gal">
-        <img src="../assets/img/vuelink.jpg" class="thumbnail" alt="">
+        <img src="/assets/img/main-page-gallery/vuelink.jpg" class="thumbnail" alt="">
         <div class="cptn">
           <div>
             <h3>The Vue on 5th</h3>
@@ -22,7 +22,7 @@
 
     <div class="cell">
       <div class="main-gal">
-        <img src="../assets/img/tc-link.jpg" class="thumbnail" alt="">
+        <img src="../assets/img/main-page-gallery/tc-link.jpg" class="thumbnail" alt="">
         <div class="cptn">
           <div>
             <h3 class="text-center">Town & Country Hotel</h3>
@@ -34,7 +34,7 @@
 
     <div class="cell">
       <div class="main-gal">
-        <img src="../assets/img/broadstone-link.jpg" class="thumbnail" alt="">
+        <img src="../assets/img/main-page-gallery/broadstone-link.jpg" class="thumbnail" alt="">
         <div class="cptn">
           <div>
             <h3>Broadstone Little Italy</h3>
@@ -46,7 +46,7 @@
 
     <div class="cell">
       <div class="main-gal">
-        <img src="../assets/img/vista-link.jpg" class="thumbnail" alt="">
+        <img src="../assets/img/main-page-gallery/vista-link.jpg" class="thumbnail" alt="">
         <div class="cptn">
           <div>
             <h3>Vista Medical Clinic</h3>
@@ -62,7 +62,7 @@
     <div class="grid-x margin-collapse small-up-1 medium-up-2 large-up-4 ">
       <div class="cell">
         <div class="main-gal">
-          <img src="../assets/img/church-link.jpg" class="thumbnail" alt="">
+          <img src="../assets/img/main-page-gallery/church-link.jpg" class="thumbnail" alt="">
           <div class="cptn">
             <div>
               <h3>Water of Life Church</h3>
@@ -74,7 +74,7 @@
 
       <div class="cell">
         <div class="main-gal">
-          <img src="../assets/img/military-link.jpg" class="thumbnail" alt="">
+          <img src="../assets/img/main-page-gallery/military-link.jpg" class="thumbnail" alt="">
           <div class="cptn">
             <div>
               <h3 class="text-center">Military Fitness</h3>
