import sweetalert2 and add event listeners
import sweet alert2 via web pack and added event listeners with alerts
for form error an success

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -25,7 +25,9 @@
 
 
 <!-- form area with abide-->
-<!-- form input area with ajax and php -->
+<!-- form input area with ajax and php, id is event listener-->
+
+
 <form method="post" id="contact-form" data-abide novalidate>
 
   <label>
