--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -1,4 +1,74 @@
 
+/* hero test*/
+$hero-height: 60vh;
+
+.hero {
+  width: 100%;
+  text-align: center;
+  height: $hero-height;
+  background: $dark-gray;
+  position: relative;
+  color: white;
+
+  .button{
+
+    background-color: #EFBB20;
+    margin: 2px;
+    border-radius: 2px;
+    color: $white;
+    line-spacing: 1px;
+    text-transform: uppercase;
+    transition:0.5s ease-in-out;
+      font-weight: normal;
+
+    &:hover,
+    &:active,
+    &:focus {
+    background: lighten($white, 5%);
+      transition: 0.5s ease-in-out;
+      color: black;
+    }
+  }
+}
+
+.hero-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+}
+
+.hero-title {
+  line-height: 1.25em;
+  margin-bottom: 1rem;
+}
+
+.hero-description {
+  margin-bottom: 1rem;
+}
+
+.hero-bg-image {
+  overflow: hidden;
+  background: url('../img/concretepour.jpg') 50% no-repeat;
+  background-position: center center;
+  background-size: cover;
+
+  // overlay
+  &:before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.4);
+    position: relative;
+  }
+}
+
+
+/* end hero test*/
+
+
 
 /* global style*/
 
@@ -104,40 +174,6 @@ div.off-canvas-nav-list {
     color: lighten( $primary, 30% );
     transition: 0.2s ease-in-out;
   }
-}
-
-/* home callout section and showcase*/
-
-.callout.large {
-  height: 60vh;
-  padding-top: rem-calc(200);
-  color: $white;
-  margin-top: -2px;
-
-  h1 {
-    color: black;
-  }
-}
-
-a.button.small {
-  margin: rem-calc(10);
-  padding: rem-calc(8 15);
-  font-weight: 500;
-  font-size: rem-calc(18);
-  letter-spacing: 0.5px;
-  line-height: 1.25;
-  border-radius: 2px;
-  background-color: #EFBB20;
-  box-shadow: -3px -3px 5px $medium-gray;
-  text-transform: uppercase;
-}
-
-/*CTA Buttons Hover*/
-a.button.small:hover {
- background-color: lighten( #EFBB20, 20% );
- transition: 0.3s ease-in-out;
- color: black;
- font-size: rem-calc(18);
 }
 
 
