--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -1,5 +1,5 @@
 
-/* hero test*/
+/* hero section*/
 $hero-height: 60vh;
 
 .hero {
@@ -66,7 +66,7 @@ $hero-height: 60vh;
 }
 
 
-/* end hero test*/
+/* end hero */
 
 
 
