update to code hero section
update to code hero section

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -55,6 +55,7 @@
 //import custom scss folder to project
 @import 'components/_custom.scss';
 @import 'components/_hover.scss';
+@import 'components/_hero.scss';
 @import 'components/_footer.scss';
 @import 'components/_gutterbottom.scss';
 @import 'components/_projectspages.scss';
