--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -10,7 +10,6 @@ $hero-height: 60vh;
   color: white;
 
   .button{
-
     background-color: #EFBB20;
     margin: 2px;
     border-radius: 2px;
@@ -18,7 +17,7 @@ $hero-height: 60vh;
     line-spacing: 1px;
     text-transform: uppercase;
     transition:0.5s ease-in-out;
-      font-weight: normal;
+    font-weight: normal;
 
     &:hover,
     &:active,
@@ -39,7 +38,7 @@ $hero-height: 60vh;
 }
 
 .hero-title {
-  line-height: 1.25em;
+  line-height: 1.25rem;
   margin-bottom: 1rem;
 }
 
