--- a/src/assets/scss/components/_projectspages.scss
+++ b/src/assets/scss/components/_projectspages.scss
@@ -24,14 +24,14 @@ section.project-name {
   /*Project Pages Hero Section*/
 
 .hero-section-a {
-  background: url('../img/thevuehero.jpg') 50% no-repeat;
+  background: url('../img/project-page-gallery/hero/thevuehero.jpg') 50% no-repeat;
     /*vue*/
   background-size: cover;
   height: 60vh;
 
 }
 .hero-section-b {
-  background: url('../img/tc_hero.jpg') 50% no-repeat;
+  background: url('../img/project-page-gallery/hero/tc_hero.jpg') 50% no-repeat;
       /*tc*/
   background-size: cover;
   height: 60vh;
