update main gallery
update main gallery

--- a/src/partials/main-page-gallery.html
+++ b/src/partials/main-page-gallery.html
@@ -86,7 +86,7 @@
 
       <div class="cell">
         <div class="main-gal">
-          <img src="../assets/img/3.jpg" class="thumbnail" alt="">
+          <img src="../assets/img/main-page-gallery/pacs-link.jpg" class="thumbnail" alt="">
           <div class="cptn">
             <div>
               <h3>Pacific Station</h3>
@@ -98,7 +98,7 @@
 
       <div class="cell">
         <div class="main-gal">
-          <img src="../assets/img/1.jpg" class="thumbnail" alt="">
+          <img src="../assets/img/main-page-gallery/project-link.jpg" class="thumbnail" alt="">
           <div class="cptn">
             <div>
               <h3>Project 8</h3>
