--- a/src/assets/scss/components/_gutterbottom.scss
+++ b/src/assets/scss/components/_gutterbottom.scss
@@ -6,10 +6,13 @@
 
   h5 {
     padding: rem-calc(15 2);
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     margin-left: rem-calc(15);
     letter-spacing: 0.1px;
     margin-bottom: -2px;
+    @include breakpoint(small only) {
+      font-size: rem-calc(13);
+    }
   }
 
   span {
