--- a/src/assets/scss/components/_contact.scss
+++ b/src/assets/scss/components/_contact.scss
@@ -39,7 +39,7 @@ input.button.expanded {
   font-size: 0.9rem;
   line-height: 1.25;
   border-radius: 2px;
-  background-color: #EFBB20;
+  background-color: $buttoncolor;
   box-shadow: -3px -3px 5px $light-gray;
   color: $white;
   font-weight: 400;
