--- a/src/partials/main-page-gallery.html
+++ b/src/partials/main-page-gallery.html
@@ -6,16 +6,15 @@
       <hr>
     </div>
   </div>
-
+<div class="grid-container full">
   <div class="grid-x margin-collapse small-up-1 medium-up-2 large-up-4 ">
+
     <div class="cell">
       <div class="main-gal">
         <img src="/assets/img/main-page-gallery/vuelink.jpg" class="thumbnail" alt="">
         <div class="cptn">
-          <div>
-            <h3>The Vue on 5th</h3>
-          </div>
-          <a href="project1_thevue.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
+
+        <a href="project1_thevue.html" target="_blank" class="button">The Vue on 5th <span><i class="fa fa-arrow-circle-right"></i></span></a>
         </div>
       </div>
     </div>
@@ -24,10 +23,7 @@
       <div class="main-gal">
         <img src="../assets/img/main-page-gallery/tc-link.jpg" class="thumbnail" alt="">
         <div class="cptn">
-          <div>
-            <h3 class="text-center">Town & Country Hotel</h3>
-          </div>
-          <a href="project2_tc.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
+          <a href="project2_tc.html" target="_blank" class="button">Town & Country Hotel <span><i class="fa fa-arrow-circle-right"></i></span></a>
         </div>
       </div>
     </div>
@@ -36,10 +32,7 @@
       <div class="main-gal">
         <img src="../assets/img/main-page-gallery/broadstone-link.jpg" class="thumbnail" alt="">
         <div class="cptn">
-          <div>
-            <h3>Broadstone Little Italy</h3>
-          </div>
-          <a href="project3_broad.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
+          <a href="project3_broad.html" target="_blank" class="button">Broadstone Little Italy <span><i class="fa fa-arrow-circle-right"></i></span></a>
         </div>
       </div>
     </div>
@@ -48,11 +41,7 @@
       <div class="main-gal">
         <img src="../assets/img/main-page-gallery/vista-link.jpg" class="thumbnail" alt="">
         <div class="cptn">
-          <div>
-            <h3>Vista Medical Clinic</h3>
-
-          </div>
-          <a href="project4_vista.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
+          <a href="project4_vista.html" target="_blank" class="button">Vista Medical Clinic <span><i class="fa fa-arrow-circle-right"></i></span></a>
         </div>
       </div>
     </div>
@@ -64,10 +53,7 @@
         <div class="main-gal">
           <img src="../assets/img/main-page-gallery/church-link.jpg" class="thumbnail" alt="">
           <div class="cptn">
-            <div>
-              <h3>Water of Life Church</h3>
-            </div>
-            <a href="project5_water.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
+            <a href="project5_water.html" target="_blank" class="button">Water of Life Church <span><i class="fa fa-arrow-circle-right"></i></span></a>
           </div>
         </div>
       </div>
@@ -76,10 +62,7 @@
         <div class="main-gal">
           <img src="../assets/img/main-page-gallery/military-link.jpg" class="thumbnail" alt="">
           <div class="cptn">
-            <div>
-              <h3 class="text-center">Military Fitness</h3>
-            </div>
-            <a href="project6_military.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
+            <a href="project6_military.html" target="_blank" class="button">Military Fitness <span><i class="fa fa-arrow-circle-right"></i></span></a>
           </div>
         </div>
       </div>
@@ -88,10 +71,7 @@
         <div class="main-gal">
           <img src="../assets/img/main-page-gallery/pacs-link.jpg" class="thumbnail" alt="">
           <div class="cptn">
-            <div>
-              <h3>Pacific Station</h3>
-            </div>
-            <a href="project7_pac.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
+            <a href="project7_pac.html" target="_blank" class="button">Pacific Station <span><i class="fa fa-arrow-circle-right"></i></span></a>
           </div>
         </div>
       </div>
@@ -100,12 +80,10 @@
         <div class="main-gal">
           <img src="../assets/img/main-page-gallery/project-link.jpg" class="thumbnail" alt="">
           <div class="cptn">
-            <div>
-              <h3>Project 8</h3>
-            </div>
-            <a href="project8.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
+            <a href="project8.html" target="_blank" class="button">Project 8 <span><i class="fa fa-arrow-circle-right"></i></span></a>
           </div>
         </div>
       </div>
+    </div>
 
   </div>
