--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -36,6 +36,9 @@
 
   h5 {
     font-size: rem-calc(18);
+    @include breakpoint(medium) {
+      font-size: rem-calc(15);
+    }
     @include breakpoint(small only) {
       text-align: center;
       font-size: rem-calc(16);
