update to gallery and UI
update to gallery and UI

--- a/src/assets/scss/components/_projectspages.scss
+++ b/src/assets/scss/components/_projectspages.scss
@@ -37,7 +37,7 @@ section.project-name {
   height: 60vh;
 }
 .hero-section-c {
-  background: url('../img/cranenight.jpg') 50% no-repeat;
+  background: url('../img/project-page-gallery/hero/bs_hero.jpg') 50% no-repeat;
     /*broadstone*/
   background-size: cover;
   height: 60vh;
