--- a/src/partials/main-page-gallery.html
+++ b/src/partials/main-page-gallery.html
@@ -2,7 +2,7 @@
 
   <div class="grid-x">
     <div class="medium-12 cell">
-      <h3 class="text-center">Current Projects</h3>
+      <h3 class="text-center">Projects</h3>
       <hr>
     </div>
   </div>
