styled modal reveal with media queries
styled modal reveal with media queries

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -728,11 +728,11 @@ $responsive-embed-ratios: (
 // 47. Reveal
 // ----------
 
-$reveal-background: $white;
-$reveal-width: 600px;
+$reveal-background: $dark-gray;
+$reveal-width: 500px;
 $reveal-max-width: $global-width;
 $reveal-padding: $global-padding;
-$reveal-border: 1px solid $medium-gray;
+$reveal-border: 0.5px solid $dark-gray;
 $reveal-radius: $global-radius;
 $reveal-zindex: 1005;
 $reveal-overlay-background: rgba($black, 0.45);
