--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -7,8 +7,30 @@ $hero-height: 60vh;
   height: $hero-height;
   background: $dark-gray;
   position: relative;
-  color: white;
+  color: $white;
 
+h1{
+  color: lighten( $primary, 30% );
+  text-transform: uppercase;
+  font-weight: 500;
+    font-size: 2.6rem;
+    @include breakpoint(small only) {
+      font-size: rem-calc(18);
+    }
+
+}
+
+.hero-sub {
+    color: $white;
+
+    @include breakpoint(small) {
+      font-size: rem-calc(14);
+    }
+}
+
+p {
+  font-size: 1.0rem;
+}
   .button{
     background-color: $buttoncolor;
     border-radius: 2px;
@@ -17,7 +39,7 @@ $hero-height: 60vh;
     transition:0.5s ease-in-out;
     font-weight: normal;
     @include breakpoint(small) {
-      padding:  rem-calc(9 5);
+      padding:  rem-calc(6 5);
       font-size: rem-calc(12);
 
     }
@@ -48,8 +70,8 @@ $hero-height: 60vh;
 
 .hero-title {
     // keep as em unit so it doesn's stack on itself
-  line-height: 1.25em;
-  margin-bottom: 1rem;
+  line-height: 1.22em;
+  margin-bottom: 1.2rem;
 }
 
 .hero-description {
@@ -62,13 +84,14 @@ $hero-height: 60vh;
   background-position: center center;
   background-size: cover;
 
-  // overlay
+
+  /*overlay*/
   &:before {
     content: '';
     display: block;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.4);
+    background: rgba(0,0,0,0.5);
     position: relative;
   }
 }
