--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -123,12 +123,7 @@ div.off-canvas-nav-list {
   padding: rem-calc(60 20);
 }
 
-/* partners */
-section.partners {
-  background: $light-gray;
-  padding: rem-calc(60 20);
 
-}
 
 /* meet our team */
 /* team section and thumbnail */
@@ -143,4 +138,46 @@ section.partners {
   .thumbnail {
     border:none;
   }
+}
+
+
+
+
+
+
+
+/* partners */
+section.partners {
+  background: $light-gray;
+  padding: rem-calc(60 0);
+}
+
+
+#partners-container {
+ max-width: 100%;
+ width: 100%;
+ margin: 0 auto;
+ margin-top: rem-calc(0);
+ background-color: $dark-gray;
+
+   #partners-container-content {
+     @include grid-row();
+     color:$light-gray;
+     padding: rem-calc(60) 0;
+     a {
+       color:$light-gray !important;
+       }
+   .links {
+     @include breakpoint(small) {
+       @include grid-layout(2, '.link-column', $grid-column-gutter);
+       }
+     @include breakpoint(large) {
+       @include grid-layout(4, '.link-column', $grid-column-gutter);
+       }
+
+     .link-column:not(:last-child) {
+     border-right:1px solid $light-gray
+     }
+   }
+ }
 }
