--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -2,11 +2,11 @@
 
 <section id="contact" data-magellan-target="contact">
   <div class="medium-12 cell text-center">
-    <h3 class="text-center">Contact Us</h3>
+    <h3 class="text-center">Contact</h3>
     <hr>
-    <h4>Tell us more about your next project</h4>
+    <!-- <h4>Tell us more about your next project</h4>
     <p>Providing proven expertise in structural concrete construction to Southern California</p>
-    <br>
+    <br> -->
   </div>
 
   <div class="grid-x grid-margin-x medium-margin-collapse">
