updated of projects pages and ui
updated of projects pages and ui

--- a/src/partials/main-page-gallery.html
+++ b/src/partials/main-page-gallery.html
@@ -80,7 +80,7 @@
           <div class="main-gal">
             <img src="../assets/img/main-page-gallery/project-link.jpg" class="thumbnail" alt="">
             <div class="cptn">
-              <a href="project8.html" target="_blank" class="button">Project 8 <span><i class="fa fa-arrow-circle-right"></i></span></a>
+              <a href="project8_alta.html" target="_blank" class="button">Alta 1919<span><i class="fa fa-arrow-circle-right"></i></span></a>
             </div>
           </div>
         </div>
