--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -142,10 +142,6 @@ div.off-canvas-nav-list {
 
 
 
-
-
-
-
 /* partners */
 section.partners {
   background: $light-gray;
@@ -159,26 +155,24 @@ section.partners {
  margin: 0 auto;
  margin-top: rem-calc(0);
  font-size: 1.2rem;
- // background-color: $dark-gray;
+
 
    #partners-container-content {
      @include grid-row();
      color:$light-gray;
      padding: rem-calc(60) 0;
      a {
-       color:blue !important;
+       color:$primary !important;
        }
    .links {
      @include breakpoint(small) {
-       @include grid-layout(2, '.link-column', $grid-column-gutter);
+       @include grid-layout(1, '.link-column', $grid-column-gutter);
+       text-align: center;
        }
-     @include breakpoint(large) {
+     @include breakpoint(medium) {
        @include grid-layout(3, '.link-column', $grid-column-gutter);
+        text-align: left;
        }
-
-     .link-column:not(:last-child) {
-     border-right:1px solid $light-gray
-     }
    }
  }
 }
