--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thunder-Jones</title>
+  <title>Thunder Jones</title>
   <link rel="stylesheet" href="{{root}}assets/css/app.css">
 </head>
 
@@ -18,8 +18,8 @@
     <!-- off canvas menu -->
     <!-- mobile nav bar -->
     <br>
-    <h4 class="text-center" id="off-canvas-nav-heading">Thunder-Jones</h4>
-    <h6 class="text-center" id="off-canvas-nav-subheading"> Contracting Group Inc.</h6>
+    <h4 class="text-center" id="off-canvas-nav-heading">Thunder Jones</h4>
+    <h6 class="text-center" id="off-canvas-nav-subheading"> Contracting Group, Incorporated</h6>
     <br>
     <div class="off-canvas-nav-list">
       <ul class="vertical dropdown menu">
@@ -38,7 +38,7 @@
     <div class="title-bar hide-for-medium">
       <div class="title-bar-left">
         <button class="menu-icon" type="button" data-open="offCanvas"></button>
-        <span class="title-bar-title"><span class="tblogo">Thunder-Jones</span> Contracting Inc</span>
+        <span class="title-bar-title"><span class="tblogo">Thunder Jones</span> Contracting Group, Incorporated</span>
       </div>
     </div>
     {{> navigation}} {{> body}} {{> footer}} {{> gutter}}
