--- a/src/partials/navigation.html
+++ b/src/partials/navigation.html
@@ -9,7 +9,7 @@
         <div class="top-bar-left">
            <ul class="dropdown menu" data-dropdown-menu>
            <li class="menu-text">
-           <h4><span>Thunder-Jones</span>Contracting Group Inc</h4></li>
+           <h4><span>Thunder Jones</span>Contracting Group, Incorporated</h4></li>
         </div>
 
         <div class="top-bar-right">
