--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -19,7 +19,7 @@
     <!-- mobile nav bar -->
     <br>
     <h4 class="text-center" id="off-canvas-nav-heading">Thunder Jones</h4>
-    <h6 class="text-center" id="off-canvas-nav-subheading"> Contracting Group, Incorporated</h6>
+    <h6 class="text-center" id="off-canvas-nav-subheading"> Contracting Group Inc.</h6>
     <br>
     <div class="off-canvas-nav-list">
       <ul class="vertical dropdown menu">
@@ -38,7 +38,7 @@
     <div class="title-bar hide-for-medium">
       <div class="title-bar-left">
         <button class="menu-icon" type="button" data-open="offCanvas"></button>
-        <span class="title-bar-title"><span class="tblogo">Thunder Jones</span> Contracting Group, Incorporated</span>
+        <span class="title-bar-title"><span class="tblogo">Thunder Jones</span> Contracting Group, Inc.</span>
       </div>
     </div>
     {{> navigation}} {{> body}} {{> footer}} {{> gutter}}
